--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background: url("/images/image.jpg") no-repeat;
+    background: url("/image.jpg") no-repeat;
     background-size: cover;
     margin: 0;
     padding: 0;
